<resources>
    <string name="app_name">AkuJuga</string>
    <string name="welcome">Welcome to</string>
    <string name="akujuga">#AkuJuga</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="pass_view">password must be at least 8 characters</string>
    <string name="name">Name</string>
    <string name="name_error">Min 4 words</string>
    <string name="title_home">Home</string>
    <string name="title_module" />
    <string name="title_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="title_camera">Detection</string>
    <string name="sign_up">Sign Up</string>
    <string name="texAccount">Don’t have an account? Sign up</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="result">Hasil:</string>
    <string name="analyze">Analisis</string>
    <string name="email">Email</string>
    <string name="setting">Setting</string>
    <string name="account">Account</string>
    <string name="camera_detection">Camera Detection</string>
    <string name="image">Image</string>
    <string name="account_information">Account Information</string>
    <string name="password">Password</string>
    <string name="appName">#AkuJuga</string>
    <string name="subtittle">Let\'s Explore!</string>
    <string name="desc_ivKamus">Deskripsi Gambar Kamus</string>
    <string name="desc_ivAngka">Deskripsi Gambar Angka</string>
    <string name="desc_ivKataSifat">Deskripsi Gambar Kata Sifat</string>
    <string name="desc_ivSapaan">Deskripsi Gambar Sapaan</string>
    <string name="camera_button">camera button</string>
    <string name="gallery_button">gallery button</string>
    <string name="description">Description</string>
    <string name="alphabet">Alphabet</string>
    <string name="Kamus">Kamus</string>
    <string name="number">Number</string>
    <string name="searchbar_hint">Pencarian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="guest">Lanjut sebagai Guest</string>
    <string name="default_web_client_id">216160499070-ht7sif3jog1jdkdjn6i1busj5m5lfgpq.apps.googleusercontent.com</string>
    <string name="title_guest">Guest</string>
    <string name="reset_button">reset kamera</string>
    <string name="alfabet">Alfabet</string>
    <string name="angka">Angka</string>
    <string name="deteksi_kamera">Deteksi Kamera</string>
    <string name="dummy_result">Huruf A</string>

    <string-array name="data_name">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="data_number">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="data_dictionary">
        <item>Apa</item>
        <item>Baik</item>
        <item>Kamu</item>
        <item>Terimakasih</item>
        <item>Tidur</item>
    </string-array>

    <string-array name="data_photo">
        <item>@drawable/a</item>
        <item>@drawable/b</item>
        <item>@drawable/c</item>
        <item>@drawable/d</item>
        <item>@drawable/e</item>
        <item>@drawable/f</item>
        <item>@drawable/g</item>
        <item>@drawable/h</item>
        <item>@drawable/i</item>
        <item>@drawable/j</item>
        <item>@drawable/k</item>
        <item>@drawable/l</item>
        <item>@drawable/m</item>
        <item>@drawable/n</item>
        <item>@drawable/o</item>
        <item>@drawable/p</item>
        <item>@drawable/q</item>
        <item>@drawable/r</item>
        <item>@drawable/s</item>
        <item>@drawable/t</item>
        <item>@drawable/u</item>
        <item>@drawable/v</item>
        <item>@drawable/x</item>
        <item>@drawable/y</item>
        <item>@drawable/z</item>
    </string-array>

    <string-array name="data_photo_number">
        <item>@drawable/a0</item>
        <item>@drawable/a1</item>
        <item>@drawable/a2</item>
        <item>@drawable/a3</item>
        <item>@drawable/a4</item>
        <item>@drawable/a5</item>
        <item>@drawable/a6</item>
        <item>@drawable/a7</item>
        <item>@drawable/a8</item>
        <item>@drawable/a9</item>
    </string-array>

    <string-array name="data_photo_dictionary">
        <item>@drawable/apa</item>
        <item>@drawable/baik</item>
        <item>@drawable/kamu</item>
        <item>@drawable/terimakasih</item>
        <item>@drawable/tidur</item>
    </string-array>

</resources>