<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/guest_navigation"
    app:startDestination="@+id/navigation_guest_home" >

    <fragment
        android:id="@+id/navigation_guest_home"
        android:name="com.example.akujuga.view.fragment.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_guest_camera"
        android:name="com.example.akujuga.view.fragment.camera.CameraFragment"
        android:label="@string/title_camera"
        tools:layout="@layout/fragment_camera" />

    <fragment
        android:id="@+id/navigation_guest_profile"
        android:name="com.example.akujuga.view.guest.GuestProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_guest_profile"/>

</navigation>