<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.fragement.account.AccountActivity">

  <TextView
      android:id="@+id/tv_account_info"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:layout_marginStart="16dp"
      android:text="@string/account_information"
      android:textColor="@color/green"
      android:textSize="24sp"
      android:textStyle="bold"
      android:alpha="0"
      tools:alpha="100"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/iv_profile"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_marginTop="32dp"
      android:src="@drawable/baseline_account_circle"
      app:layout_constraintTop_toBottomOf="@id/tv_account_info"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:scaleType="centerCrop"
      android:layout_gravity="center" />


  <TextView
      android:id="@+id/username"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/name"
      android:textSize="20sp"
      android:textStyle="bold"
      android:textColor="@color/green"
      app:layout_constraintTop_toBottomOf="@id/iv_profile"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:alpha="0"
      tools:alpha="100"
      android:layout_marginTop="16dp"/>

  <TextView
      android:id="@+id/email"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:padding="12dp"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintTop_toBottomOf="@id/username"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:alpha="0"
      tools:alpha="100"
      android:layout_marginTop="24dp"/>

  <TextView
      android:id="@+id/password"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:padding="12dp"
      android:textColor="@color/black"
      android:textSize="16sp"
      app:layout_constraintTop_toBottomOf="@id/email"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:alpha="0"
      tools:alpha="100"
      android:layout_marginTop="16dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>